Update PIP command

--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMwW8YiXZqplVzGulKsmYyM"
+      "authorship_tag": "ABX9TyOo17yeP8NpJHRu/R6UuGgL"
     },
     "kernelspec": {
       "name": "python3",
@@ -91,7 +91,7 @@
         "!mkdir -p /content/drive/MyDrive\n",
         "!git -C /content/drive/MyDrive/Colab-TextGen pull || git clone https://github.com/oobabooga/text-generation-webui /content/drive/MyDrive/Colab-TextGen\n",
         "%cd /content/drive/MyDrive/Colab-TextGen\n",
-        "!pip --quiet --no-cache-dir install --root-user-action=ignore -r requirements.txt bitsandbytes"
+        "!pip install --no-cache-dir --progress-bar=off --root-user-action=ignore -r requirements.txt bitsandbytes"
       ],
       "metadata": {
         "id": "F1mssJmZ5BMg",
