--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOo17yeP8NpJHRu/R6UuGgL"
+      "authorship_tag": "ABX9TyMNSlMwNflYHC84Wd2ZKICO"
     },
     "kernelspec": {
       "name": "python3",
@@ -21,7 +21,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# PygmalionAI alternative on Google Colab\n",
+        "# Alternative PygmalionAI notebook for Google Colab\n",
         "\n",
         "Version: GPU\n",
         "\n",
