Update info message

--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMNSlMwNflYHC84Wd2ZKICO"
+      "authorship_tag": "ABX9TyO+XIrbk+qU3N6kLAgP+P6y"
     },
     "kernelspec": {
       "name": "python3",
@@ -25,7 +25,7 @@
         "\n",
         "Version: GPU\n",
         "\n",
-        "This notebook is an unofficial method to run [PygmalionAI LLM models](https://github.com/PygmalionAI) that uses **oobabooga**'s [text-generation-webui project](https://github.com/oobabooga/text-generation-webui).\n",
+        "This notebook is an unofficial method to run [PygmalionAI LLMs](https://github.com/PygmalionAI) that uses **oobabooga**'s [text-generation-webui project](https://github.com/oobabooga/text-generation-webui).\n",
         "\n",
         "Run the cells below in order to set it up.\n",
         "\n",
