Remove extraneous bitsandbytes, add the other Pygmalion models, fix launch path

--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyO+XIrbk+qU3N6kLAgP+P6y"
+      "authorship_tag": "ABX9TyOPM0N4TSvjzH8FQ7+iIP1r"
     },
     "kernelspec": {
       "name": "python3",
@@ -91,7 +91,7 @@
         "!mkdir -p /content/drive/MyDrive\n",
         "!git -C /content/drive/MyDrive/Colab-TextGen pull || git clone https://github.com/oobabooga/text-generation-webui /content/drive/MyDrive/Colab-TextGen\n",
         "%cd /content/drive/MyDrive/Colab-TextGen\n",
-        "!pip install --no-cache-dir --progress-bar=off --root-user-action=ignore -r requirements.txt bitsandbytes"
+        "!pip install --no-cache-dir --progress-bar=off --root-user-action=ignore -r requirements.txt"
       ],
       "metadata": {
         "id": "F1mssJmZ5BMg",
@@ -105,14 +105,20 @@
       "source": [
         "#@title 4. Select and download a PygmalionAI model\n",
         "\n",
-        "Model = \"Pygmalion 6B\" #@param [\"Pygmalion 6B\", \"Pygmalion 1.3B\"] {allow-input: true}\n",
+        "Model = \"Pygmalion 6B\" #@param [\"Pygmalion 6B\", \"Pygmalion 2.7B\", \"Pygmalion 1.3B\", \"Pygmalion 350M\" ] {allow-input: true}\n",
         "\n",
         "if Model == \"Pygmalion 6B\":\n",
         "  huggingface_org = \"PygmalionAI\"\n",
         "  chosen_model = \"pygmalion-6b\"\n",
+        "elif Model == \"Pygmalion 2.7B\":\n",
+        "  huggingface_org = \"PygmalionAI\"\n",
+        "  chosen_model = \"pygmalion-2.7b\"\n",
         "elif Model == \"Pygmalion 1.3B\":\n",
         "  huggingface_org = \"PygmalionAI\"\n",
         "  chosen_model = \"pygmalion-1.3b\"\n",
+        "elif Model == \"Pygmalion 350M\":\n",
+        "  huggingface_org = \"PygmalionAI\"\n",
+        "  chosen_model = \"pygmalion-350m\"\n",
         "\n",
         "%cd /content/drive/MyDrive/Colab-TextGen\n",
         "!mkdir -p /content/models/$chosen_model\n",
@@ -131,7 +137,7 @@
       "source": [
         "#@title 5. Launch the web interface\n",
         "\n",
-        "!cd /content/drive/MyDrive/Colab-TextGen\n",
+        "%cd /content/drive/MyDrive/Colab-TextGen\n",
         "!python server.py --cai-chat --share --auto-devices --load-in-8bit --model $chosen_model"
       ],
       "metadata": {
