Fix Conda env, improve CPU RAM usage, implement model resharding

--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "private_outputs": true,
-      "provenance": [],
-      "authorship_tag": "ABX9TyOPM0N4TSvjzH8FQ7+iIP1r"
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -31,8 +30,8 @@
         "\n",
         "---\n",
         "\n",
-        "After completing step 3 you may upload your character definitions in `.json` format to [Google Drive](https://drive.google.com/) by navigating to the following directory:\n",
-        "  * **My Drive** &rarr; **Colab-TextGen** &rarr; **characters**\n",
+        "After step 3, if you enabled Google Drive, you may upload character definitions in `.json` format by navigating to:\n",
+        "  * [**Drive**](https://drive.google.com/) &rarr; **My Drive** &rarr; **Colab-TextGen** &rarr; **characters**\n",
         "\n",
         "At the end of step 5 click on the `.gradio.live` link to access the web interface."
       ],
@@ -66,12 +65,13 @@
         "!wget -c https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh\n",
         "%env PYTHONPATH=\n",
         "!which conda 2>/dev/null || bash Miniconda3-latest-Linux-x86_64.sh -b -p /usr/local -f\n",
-        "\n",
         "%env CI=true\n",
-        "!conda update -y -q -c defaults --all\n",
-        "!conda install -y -q -c defaults conda python\n",
-        "!conda install -y -q -c pytorch -c nvidia pytorch torchvision torchaudio pytorch-cuda=11.7\n",
-        "!conda clean -y -q --all"
+        "!conda init -q bash\n",
+        "!source /usr/local/bin/activate && conda update -y -q -c defaults --all\n",
+        "!source /usr/local/bin/activate && conda create -y -q -n textgen\n",
+        "!source /usr/local/bin/activate && conda activate textgen && conda install -y -q -c defaults conda python\n",
+        "!source /usr/local/bin/activate && conda activate textgen && conda install -y -q -c pytorch -c nvidia pytorch torchvision torchaudio pytorch-cuda=11.7\n",
+        "!source /usr/local/bin/activate && conda clean -y -q --all"
       ],
       "metadata": {
         "id": "LGQ8BiMuXMDG",
@@ -83,15 +83,35 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title 3. Clone the repository into your Google Drive and install dependencies\n",
+        "#@title 3. Clone the repository and install dependencies\n",
         "\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
+        "Enable_Google_drive = True #@param {type:\"boolean\"}\n",
         "\n",
-        "!mkdir -p /content/drive/MyDrive\n",
+        "if Enable_Google_drive:\n",
+        "  from google.colab import drive\n",
+        "  drive.mount('/content/drive')\n",
+        "else:\n",
+        "  import os\n",
+        "  if not os.path.exists(\"/content/drive\"):\n",
+        "    os.mkdir(\"/content/drive\")\n",
+        "  if not os.path.exists(\"/content/drive/MyDrive/\"):\n",
+        "    os.mkdir(\"/content/drive/MyDrive/\")\n",
+        "\n",
+        "# Download Github repo\n",
         "!git -C /content/drive/MyDrive/Colab-TextGen pull || git clone https://github.com/oobabooga/text-generation-webui /content/drive/MyDrive/Colab-TextGen\n",
+        "\n",
         "%cd /content/drive/MyDrive/Colab-TextGen\n",
-        "!pip install --no-cache-dir --progress-bar=off --root-user-action=ignore -r requirements.txt"
+        "\n",
+        "# Set model directories outside of Google Drive\n",
+        "!mountpoint -q models || mv -f models models_backup\n",
+        "!mountpoint -q torch-dumps || mv -f torch-dumps torch-dumps_backup\n",
+        "!mkdir -p models torch-dumps /content/models /content/torch-dumps\n",
+        "!mountpoint -q models || mount --bind /content/models models\n",
+        "!mountpoint -q torch-dumps || mount --bind /content/torch-dumps torch-dumps\n",
+        "\n",
+        "# Install requirements\n",
+        "!source /usr/local/bin/activate && conda activate textgen \\\n",
+        "  && pip install --no-cache-dir --progress-bar=off --root-user-action=ignore -r requirements.txt diffusers"
       ],
       "metadata": {
         "id": "F1mssJmZ5BMg",
@@ -103,27 +123,55 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title 4. Select and download a PygmalionAI model\n",
+        "#@title 4. Select a PygmalionAI model\n",
         "\n",
-        "Model = \"Pygmalion 6B\" #@param [\"Pygmalion 6B\", \"Pygmalion 2.7B\", \"Pygmalion 1.3B\", \"Pygmalion 350M\" ] {allow-input: true}\n",
+        "Model = \"Pygmalion 6B\" #@param [\"Pygmalion 6B\", \"Pygmalion 6B experimental\", \"Pygmalion 2.7B\", \"Pygmalion 1.3B\", \"Pygmalion 350M\"] {allow-input: false}\n",
+        "Reshard_model = True #@param {type: \"boolean\"}\n",
+        "Max_shard_size = \"7500MB\" #@param [\"7500MB\", \"3GB\", \"1GB\"] {allow-input: true}\n",
         "\n",
         "if Model == \"Pygmalion 6B\":\n",
         "  huggingface_org = \"PygmalionAI\"\n",
-        "  chosen_model = \"pygmalion-6b\"\n",
+        "  huggingface_repo = \"pygmalion-6b\"\n",
+        "  huggingface_branch = \"main\"\n",
+        "  model_name = \"pygmalion-6b\"\n",
+        "elif Model == \"Pygmalion 6B experimental\":\n",
+        "  huggingface_org = \"PygmalionAI\"\n",
+        "  huggingface_repo = \"pygmalion-6b\"\n",
+        "  huggingface_branch = \"dev\"\n",
+        "  model_name = \"pygmalion-6b_dev\"\n",
         "elif Model == \"Pygmalion 2.7B\":\n",
         "  huggingface_org = \"PygmalionAI\"\n",
-        "  chosen_model = \"pygmalion-2.7b\"\n",
+        "  huggingface_repo = \"pygmalion-2.7b\"\n",
+        "  huggingface_branch = \"main\"\n",
+        "  model_name = \"pygmalion-2.7b\"\n",
         "elif Model == \"Pygmalion 1.3B\":\n",
         "  huggingface_org = \"PygmalionAI\"\n",
-        "  chosen_model = \"pygmalion-1.3b\"\n",
+        "  huggingface_repo = \"pygmalion-1.3b\"\n",
+        "  huggingface_branch = \"main\"\n",
+        "  model_name = \"pygmalion-1.3b\"\n",
         "elif Model == \"Pygmalion 350M\":\n",
         "  huggingface_org = \"PygmalionAI\"\n",
-        "  chosen_model = \"pygmalion-350m\"\n",
+        "  huggingface_repo = \"pygmalion-350m\"\n",
+        "  huggingface_branch = \"main\"\n",
+        "  model_name = \"pygmalion-350m\"\n",
         "\n",
         "%cd /content/drive/MyDrive/Colab-TextGen\n",
-        "!mkdir -p /content/models/$chosen_model\n",
-        "!ln -s -f /content/models/$chosen_model/ models/$chosen_model\n",
-        "![[ ! -f models/$chosen_model/config.json ]] && python download-model.py $huggingface_org/$chosen_model"
+        "\n",
+        "# Download the model\n",
+        "![[ ! -f models/$model_name/config.json ]] && source /usr/local/bin/activate && conda activate textgen \\\n",
+        "  && python download-model.py $huggingface_org/$huggingface_repo --branch $huggingface_branch\n",
+        "\n",
+        "# Convert model if the reshard option was checked\n",
+        "if Reshard_model:\n",
+        "  original_path = model_name\n",
+        "  resharded_path = model_name + f'_resharded'\n",
+        "  launch_model = resharded_path\n",
+        "else:\n",
+        "    launch_model = model_name\n",
+        "![[ $Reshard_model = True ]] && source /usr/local/bin/activate && conda activate textgen \\\n",
+        "  && wget -c https://gist.githubusercontent.com/81300/fe5b08bff1cba45296a829b9d6b0f303/raw/2bad1df5796328d7385ca7923fcd703dc0243dde/reshard-model.py \\\n",
+        "  && python reshard-model.py --src-path models/$original_path --out-path models/$resharded_path --max-shard-size $Max_shard_size --offload /content/offload \\\n",
+        "  && cp -fa models/$original_path/*token*.json models/$original_path/vocab.json models/$resharded_path"
       ],
       "metadata": {
         "cellView": "form",
@@ -138,11 +186,30 @@
         "#@title 5. Launch the web interface\n",
         "\n",
         "%cd /content/drive/MyDrive/Colab-TextGen\n",
-        "!python server.py --cai-chat --share --auto-devices --load-in-8bit --model $chosen_model"
+        "\n",
+        "!source /usr/local/bin/activate && conda activate textgen \\\n",
+        "  && python server.py --share --cai-chat --no-stream --auto-devices --model $launch_model"
       ],
       "metadata": {
         "cellView": "form",
         "id": "txeAxCGyRK1F"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Cleanup all models\n",
+        "\n",
+        "#@markdown Free up space within the current runtime.\n",
+        "\n",
+        "!find /content/models -mindepth 1 -maxdepth 1 -type d -exec rm -rv \"{}\" \\;\n",
+        "!find /content/torch-dumps -mindepth 1 -exec rm -rv \"{}\" \\;"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "XbKanChesbUM"
       },
       "execution_count": null,
       "outputs": []
