Update info message

--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -87,7 +87,7 @@
         "\n",
         "Enable_Google_drive = True #@param {type:\"boolean\"}\n",
         "\n",
-        "if Enable_Google_drive:\n",
+        "if Enable_Google_Drive:\n",
         "  from google.colab import drive\n",
         "  drive.mount('/content/drive')\n",
         "else:\n",
@@ -202,7 +202,7 @@
       "source": [
         "#@title Cleanup all models\n",
         "\n",
-        "#@markdown Free up space within the current runtime.\n",
+        "#@markdown Free up space within the current runtime. After this completes run step 4 again.\n",
         "\n",
         "!find /content/models -mindepth 1 -maxdepth 1 -type d -exec rm -rv \"{}\" \\;\n",
         "!find /content/torch-dumps -mindepth 1 -exec rm -rv \"{}\" \\;"
