--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -85,7 +85,7 @@
       "source": [
         "#@title 3. Clone the repository and install dependencies\n",
         "\n",
-        "Enable_Google_drive = True #@param {type:\"boolean\"}\n",
+        "Enable_Google_Drive = True #@param {type:\"boolean\"}\n",
         "\n",
         "if Enable_Google_Drive:\n",
         "  from google.colab import drive\n",
