--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -22,18 +22,11 @@
       "source": [
         "# Alternative PygmalionAI notebook for Google Colab\n",
         "\n",
-        "Version: GPU\n",
+        "This notebook is an *unofficial* method to run [PygmalionAI LLMs](https://github.com/PygmalionAI) that uses **oobabooga**'s [text-generation-webui project](https://github.com/oobabooga/text-generation-webui).\n",
         "\n",
-        "This notebook is an unofficial method to run [PygmalionAI LLMs](https://github.com/PygmalionAI) that uses **oobabooga**'s [text-generation-webui project](https://github.com/oobabooga/text-generation-webui).\n",
+        "Run all the cells and a public gradio URL will appear at the bottom in around 12 minutes.\n",
         "\n",
-        "Run the cells below in order to set it up.\n",
-        "\n",
-        "---\n",
-        "\n",
-        "After step 3, if you enabled Google Drive, you may upload character definitions in `.json` format by navigating to:\n",
-        "  * [**Drive**](https://drive.google.com/) &rarr; **My Drive** &rarr; **Colab-TextGen** &rarr; **characters**\n",
-        "\n",
-        "At the end of step 5 click on the `.gradio.live` link to access the web interface."
+        "Author: https://github.com/81300"
       ],
       "metadata": {
         "id": "MFQl6-FjSYtY"
@@ -59,7 +52,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title 2. Prepare the Conda environment\n",
+        "#@title 2. Select the model and start the web UI\n",
         "\n",
         "%cd /tmp\n",
         "!wget -c https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh\n",
@@ -71,31 +64,13 @@
         "!source /usr/local/bin/activate && conda create -y -q -n textgen\n",
         "!source /usr/local/bin/activate && conda activate textgen && conda install -y -q -c defaults conda python\n",
         "!source /usr/local/bin/activate && conda activate textgen && conda install -y -q -c pytorch -c nvidia pytorch torchvision torchaudio pytorch-cuda=11.7\n",
-        "!source /usr/local/bin/activate && conda clean -y -q --all"
-      ],
-      "metadata": {
-        "id": "LGQ8BiMuXMDG",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title 3. Clone the repository and install dependencies\n",
+        "!source /usr/local/bin/activate && conda clean -y -q --all\n",
         "\n",
-        "Enable_Google_Drive = True #@param {type:\"boolean\"}\n",
-        "\n",
-        "if Enable_Google_Drive:\n",
-        "  from google.colab import drive\n",
-        "  drive.mount('/content/drive')\n",
-        "else:\n",
-        "  import os\n",
-        "  if not os.path.exists(\"/content/drive\"):\n",
-        "    os.mkdir(\"/content/drive\")\n",
-        "  if not os.path.exists(\"/content/drive/MyDrive/\"):\n",
-        "    os.mkdir(\"/content/drive/MyDrive/\")\n",
+        "import os\n",
+        "if not os.path.exists(\"/content/drive\"):\n",
+        "  os.mkdir(\"/content/drive\")\n",
+        "if not os.path.exists(\"/content/drive/MyDrive/\"):\n",
+        "  os.mkdir(\"/content/drive/MyDrive/\")\n",
         "\n",
         "# Download Github repo\n",
         "!git -C /content/drive/MyDrive/Colab-TextGen pull || git clone https://github.com/oobabooga/text-generation-webui /content/drive/MyDrive/Colab-TextGen\n",
@@ -111,23 +86,9 @@
         "\n",
         "# Install requirements\n",
         "!source /usr/local/bin/activate && conda activate textgen \\\n",
-        "  && pip install --no-cache-dir --progress-bar=off --root-user-action=ignore -r requirements.txt diffusers"
-      ],
-      "metadata": {
-        "id": "F1mssJmZ5BMg",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title 4. Select a PygmalionAI model\n",
+        "  && pip install --no-cache-dir --progress-bar=off --root-user-action=ignore -r requirements.txt diffusers\n",
         "\n",
         "Model = \"Pygmalion 6B\" #@param [\"Pygmalion 6B\", \"Pygmalion 6B experimental\", \"Pygmalion 2.7B\", \"Pygmalion 1.3B\", \"Pygmalion 350M\"] {allow-input: false}\n",
-        "Reshard_model = True #@param {type: \"boolean\"}\n",
-        "Max_shard_size = \"7500MB\" #@param [\"7500MB\", \"3GB\", \"1GB\"] {allow-input: true}\n",
         "\n",
         "if Model == \"Pygmalion 6B\":\n",
         "  huggingface_org = \"PygmalionAI\"\n",
@@ -161,29 +122,7 @@
         "![[ ! -f models/$model_name/config.json ]] && source /usr/local/bin/activate && conda activate textgen \\\n",
         "  && python download-model.py $huggingface_org/$huggingface_repo --branch $huggingface_branch\n",
         "\n",
-        "# Convert model if the reshard option was checked\n",
-        "if Reshard_model:\n",
-        "  original_path = model_name\n",
-        "  resharded_path = model_name + f'_resharded'\n",
-        "  launch_model = resharded_path\n",
-        "else:\n",
-        "    launch_model = model_name\n",
-        "![[ $Reshard_model = True ]] && source /usr/local/bin/activate && conda activate textgen \\\n",
-        "  && wget -c https://gist.githubusercontent.com/81300/fe5b08bff1cba45296a829b9d6b0f303/raw/b4d6f8971e2c4f03b183e5bdeb8f7be0b424b865/reshard-model.py \\\n",
-        "  && python reshard-model.py --src-path models/$original_path --out-path models/$resharded_path --max-shard-size $Max_shard_size --offload /content/offload \\\n",
-        "  && cp -fa models/$original_path/*token*.json models/$original_path/vocab.json models/$resharded_path"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "yyl9TGSoRIwV"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title 5. Launch the web interface\n",
+        "launch_model = model_name\n",
         "\n",
         "%cd /content/drive/MyDrive/Colab-TextGen\n",
         "\n",
@@ -191,25 +130,8 @@
         "  && python server.py --share --cai-chat --no-stream --auto-devices --model $launch_model"
       ],
       "metadata": {
-        "cellView": "form",
-        "id": "txeAxCGyRK1F"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title Cleanup all models\n",
-        "\n",
-        "#@markdown Free up space within the current runtime. After this completes run step 4 again.\n",
-        "\n",
-        "!find /content/models -mindepth 1 -maxdepth 1 -type d -exec rm -rv \"{}\" \\;\n",
-        "!find /content/torch-dumps -mindepth 1 -exec rm -rv \"{}\" \\;"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "XbKanChesbUM"
+        "id": "LGQ8BiMuXMDG",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
