--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -22,7 +22,7 @@
       "source": [
         "# Alternative PygmalionAI notebook for Google Colab\n",
         "\n",
-        "This notebook is an *unofficial* method to run [PygmalionAI LLMs](https://github.com/PygmalionAI) that uses **oobabooga**'s [text-generation-webui project](https://github.com/oobabooga/text-generation-webui).\n",
+        "This notebook is an *unofficial* method to run [PygmalionAI LLMs](https://huggingface.co/PygmalionAI) (NSFW) that uses **oobabooga**'s [text-generation-webui project](https://github.com/oobabooga/text-generation-webui) in chat mode.\n",
         "\n",
         "Run all the cells and a public gradio URL will appear at the bottom in around 12 minutes.\n",
         "\n",
