--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -26,7 +26,7 @@
         "\n",
         "Run all the cells and a public gradio URL will appear at the bottom in around 12 minutes.\n",
         "\n",
-        "You can create your own custom characters using the [Pygmalion JSON character creator](https://oobabooga.github.io/character-creator.html)",
+        "You can create your own custom characters using the [Pygmalion JSON character creator](https://oobabooga.github.io/character-creator.html)\n",
         "\n",
         "Original author: https://github.com/81300"
       ],
