--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -90,9 +90,14 @@
         "!source /usr/local/bin/activate && conda activate textgen \\\n",
         "  && pip install --no-cache-dir --progress-bar=off --root-user-action=ignore -r requirements.txt diffusers\n",
         "\n",
-        "Model = \"Pygmalion 6B\" #@param [\"Pygmalion 6B\", \"Pygmalion 6B experimental\", \"Pygmalion 2.7B\", \"Pygmalion 1.3B\", \"Pygmalion 350M\"] {allow-input: false}\n",
+        "Model = \"Pygmalion 6B-original (oobabooga reupload, yields better results)\" #@param [\"Pygmalion 6B-original (oobabooga reupload, yields better results)\", \"Pygmalion 6B\", \"Pygmalion 6B experimental\", \"Pygmalion 2.7B\", \"Pygmalion 1.3B\", \"Pygmalion 350M\"] {allow-input: false}\n",
         "\n",
-        "if Model == \"Pygmalion 6B\":\n",
+        "if Model == \"Pygmalion 6B-original (oobabooga reupload, yields better results)\":\n",
+        "  huggingface_org = \"oobabooga\"\n",
+        "  huggingface_repo = \"pygmalion-6b-original\"\n",
+        "  huggingface_branch = \"main\"\n",
+        "  model_name = \"pygmalion-6b-original\"\n",
+        "elif Model == \"Pygmalion 6B\":\n",
         "  huggingface_org = \"PygmalionAI\"\n",
         "  huggingface_repo = \"pygmalion-6b\"\n",
         "  huggingface_branch = \"main\"\n",
