--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -22,7 +22,7 @@
       "source": [
         "# Alternative PygmalionAI notebook for Google Colab\n",
         "\n",
-        "This notebook is an *unofficial* method to run [PygmalionAI LLMs](https://huggingface.co/PygmalionAI) (NSFW) that uses **oobabooga**'s [text-generation-webui project](https://github.com/oobabooga/text-generation-webui) in chat mode.\n",
+        "This notebook is an *unofficial* method to run the [PygmalionAI LLMs](https://huggingface.co/PygmalionAI) (NSFW) using **oobabooga**'s [text-generation-webui](https://github.com/oobabooga/text-generation-webui) project in chat mode.\n",
         "\n",
         "Run all the cells and a public gradio URL will appear at the bottom in around 12 minutes.\n",
         "\n",
@@ -68,23 +68,14 @@
         "!source /usr/local/bin/activate && conda activate textgen && conda install -y -q -c pytorch -c nvidia pytorch torchvision torchaudio pytorch-cuda=11.7\n",
         "!source /usr/local/bin/activate && conda clean -y -q --all\n",
         "\n",
-        "import os\n",
-        "if not os.path.exists(\"/content/drive\"):\n",
-        "  os.mkdir(\"/content/drive\")\n",
-        "if not os.path.exists(\"/content/drive/MyDrive/\"):\n",
-        "  os.mkdir(\"/content/drive/MyDrive/\")\n",
-        "\n",
         "# Download Github repo\n",
-        "!git -C /content/drive/MyDrive/Colab-TextGen pull || git clone https://github.com/oobabooga/text-generation-webui /content/drive/MyDrive/Colab-TextGen\n",
-        "\n",
-        "%cd /content/drive/MyDrive/Colab-TextGen\n",
-        "\n",
-        "# Set model directories outside of Google Drive\n",
-        "!mountpoint -q models || mv -f models models_backup\n",
-        "!mountpoint -q torch-dumps || mv -f torch-dumps torch-dumps_backup\n",
-        "!mkdir -p models torch-dumps /content/models /content/torch-dumps\n",
-        "!mountpoint -q models || mount --bind /content/models models\n",
-        "!mountpoint -q torch-dumps || mount --bind /content/torch-dumps torch-dumps\n",
+        "%cd /content\n",
+        "!git clone https://github.com/oobabooga/text-generation-webui\n",
+        "!ln -s text-generation-webui/models .\n",
+        "!ln -s text-generation-webui/characters .\n",
+        "!ln -s text-generation-webui/presets .\n",
+        "%cd text-generation-webui\n",
+        "!wget https://oobabooga.github.io/settings-colab.json\n",
         "\n",
         "# Install requirements\n",
         "!source /usr/local/bin/activate && conda activate textgen \\\n",
@@ -123,18 +114,12 @@
         "  huggingface_branch = \"main\"\n",
         "  model_name = \"pygmalion-350m\"\n",
         "\n",
-        "%cd /content/drive/MyDrive/Colab-TextGen\n",
-        "\n",
         "# Download the model\n",
         "![[ ! -f models/$model_name/config.json ]] && source /usr/local/bin/activate && conda activate textgen \\\n",
         "  && python download-model.py $huggingface_org/$huggingface_repo --branch $huggingface_branch\n",
         "\n",
-        "launch_model = model_name\n",
-        "\n",
-        "%cd /content/drive/MyDrive/Colab-TextGen\n",
-        "\n",
         "!source /usr/local/bin/activate && conda activate textgen \\\n",
-        "  && python server.py --share --cai-chat --no-stream --auto-devices --model $launch_model"
+        "  && python server.py --share --cai-chat --no-stream --auto-devices --model $model_name --settings settings-colab.json"
       ],
       "metadata": {
         "id": "LGQ8BiMuXMDG",
