--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -83,36 +83,15 @@
         "\n",
         "Model = \"Pygmalion 6B-original (yields better results)\" #@param [\"Pygmalion 6B-original (yields better results)\", \"Pygmalion 6B\", \"Pygmalion 6B experimental\", \"Pygmalion 2.7B\", \"Pygmalion 1.3B\", \"Pygmalion 350M\"] {allow-input: false}\n",
         "\n",
-        "if Model == \"Pygmalion 6B-original (yields better results)\":\n",
-        "  huggingface_org = \"PygmalionAI\"\n",
-        "  huggingface_repo = \"pygmalion-6b\"\n",
-        "  huggingface_branch = \"b8344bb4eb76a437797ad3b19420a13922aaabe1\"\n",
-        "  model_name = \"pygmalion-6b_b8344bb4eb76a437797ad3b19420a13922aaabe1\"\n",
-        "elif Model == \"Pygmalion 6B\":\n",
-        "  huggingface_org = \"PygmalionAI\"\n",
-        "  huggingface_repo = \"pygmalion-6b\"\n",
-        "  huggingface_branch = \"main\"\n",
-        "  model_name = \"pygmalion-6b\"\n",
-        "elif Model == \"Pygmalion 6B experimental\":\n",
-        "  huggingface_org = \"PygmalionAI\"\n",
-        "  huggingface_repo = \"pygmalion-6b\"\n",
-        "  huggingface_branch = \"dev\"\n",
-        "  model_name = \"pygmalion-6b_dev\"\n",
-        "elif Model == \"Pygmalion 2.7B\":\n",
-        "  huggingface_org = \"PygmalionAI\"\n",
-        "  huggingface_repo = \"pygmalion-2.7b\"\n",
-        "  huggingface_branch = \"main\"\n",
-        "  model_name = \"pygmalion-2.7b\"\n",
-        "elif Model == \"Pygmalion 1.3B\":\n",
-        "  huggingface_org = \"PygmalionAI\"\n",
-        "  huggingface_repo = \"pygmalion-1.3b\"\n",
-        "  huggingface_branch = \"main\"\n",
-        "  model_name = \"pygmalion-1.3b\"\n",
-        "elif Model == \"Pygmalion 350M\":\n",
-        "  huggingface_org = \"PygmalionAI\"\n",
-        "  huggingface_repo = \"pygmalion-350m\"\n",
-        "  huggingface_branch = \"main\"\n",
-        "  model_name = \"pygmalion-350m\"\n",
+        "models = {\n",
+        "    \"Pygmalion 6B-original (yields better results)\": (\"PygmalionAI\", \"pygmalion-6b\", \"b8344bb4eb76a437797ad3b19420a13922aaabe1\", \"pygmalion-6b_b8344bb4eb76a437797ad3b19420a13922aaabe1\"),\n",
+        "    \"Pygmalion 6B\": (\"PygmalionAI\", \"pygmalion-6b\", \"main\", \"pygmalion-6b\"),\n",
+        "    \"Pygmalion 6B experimental\": (\"PygmalionAI\", \"pygmalion-6b\", \"dev\", \"pygmalion-6b_dev\"),\n",
+        "    \"Pygmalion 2.7B\": (\"PygmalionAI\", \"pygmalion-2.7b\", \"main\", \"pygmalion-2.7b\"),\n",
+        "    \"Pygmalion 1.3B\": (\"PygmalionAI\", \"pygmalion-1.3b\", \"main\", \"pygmalion-1.3b\"),\n",
+        "    \"Pygmalion 350M\": (\"PygmalionAI\", \"pygmalion-350m\", \"main\", \"pygmalion-350m\")\n",
+        "}\n",
+        "huggingface_org, huggingface_repo, huggingface_branch, model_name = models[Model]\n",
         "\n",
         "# Download the model\n",
         "![[ ! -f models/$model_name/config.json ]] && source /usr/local/bin/activate && conda activate textgen \\\n",
@@ -122,8 +101,7 @@
         "  && python server.py --share --cai-chat --no-stream --auto-devices --model $model_name --settings settings-colab.json"
       ],
       "metadata": {
-        "id": "LGQ8BiMuXMDG",
-        "cellView": "form"
+        "id": "LGQ8BiMuXMDG"
       },
       "execution_count": null,
       "outputs": []
