--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -101,7 +101,8 @@
         "  && python server.py --share --cai-chat --no-stream --auto-devices --model $model_name --settings settings-colab.json"
       ],
       "metadata": {
-        "id": "LGQ8BiMuXMDG"
+        "id": "LGQ8BiMuXMDG",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
