--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -74,6 +74,7 @@
         "!ln -s text-generation-webui/models .\n",
         "!ln -s text-generation-webui/characters .\n",
         "!ln -s text-generation-webui/presets .\n",
+        "%rm -r sample_data\n",
         "%cd text-generation-webui\n",
         "!wget https://oobabooga.github.io/settings-colab.json\n",
         "\n",
