--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -99,7 +99,7 @@
         "  && python download-model.py $huggingface_org/$huggingface_repo --branch $huggingface_branch\n",
         "\n",
         "!source /usr/local/bin/activate && conda activate textgen \\\n",
-        "  && python server.py --share --cai-chat --no-stream --auto-devices --model $model_name --settings settings-colab.json"
+        "  && python server.py --share --cai-chat --auto-devices --model $model_name --settings settings-colab.json"
       ],
       "metadata": {
         "id": "LGQ8BiMuXMDG",
